Cart bugfix - add horizontal scroll for mouse
Cart bugfix - useHorizontalScroll hook added to handle the mouse scroll

--- a/src/components/propertySelector/propertySelector.scss
+++ b/src/components/propertySelector/propertySelector.scss
@@ -6,7 +6,7 @@
     column-gap: 10px;
     max-width: 110px;
     width: 100%;
-    overflow-x: scroll;
+    overflow: auto;
     transition: color 0.25s;
     color: transparent;
 
